--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,32 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Transcribolt - Speech to Text Transcription Service</title>
+		<meta name="description" content="Transcribolt offers online fast and accurate speech to text transcription for audio and video files.">
+		<meta name="keywords" content="transcription, speech to text, audio transcription, video transcription, automatic transcription, Transcribolt">
+		<meta name="author" content="Transcribolt Team">
+		<meta name="robots" content="index, follow">
+		<link rel="canonical" href="https://www.transcribolt.com">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:title" content="Transcribolt - Speech to Text Transcription Service">
+		<meta property="og:description" content="Transcribolt offers online fast and accurate speech to text transcription for audio and video files.">
+		<meta property="og:url" content="https://www.transcribolt.com">
+		<meta property="og:type" content="website">
+		<!-- <meta property="og:image" content="https://www.transcribolt.com/images/og-image.jpg">-->
+
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Transcribolt - Speech to Text Transcription Service">
+		<meta name="twitter:description" content="Transcribolt offers online fast and accurate speech to text transcription for audio and video files.">
+		<!-- <meta name="twitter:image" content="https://www.transcribolt.com/images/twitter-image.jpg"> -->
+
+		<!-- Additional Meta Tags -->
+		<meta name="theme-color" content="#ffffff">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">-->
+
 		%sveltekit.head%
 		<script
 			src="https://beamanalytics.b-cdn.net/beam.min.js"
