Add favicon and manifest

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Transcribolt - Speech to Text Transcription Service</title>
 		<meta name="description" content="Transcribolt offers online fast and accurate speech to text transcription for audio and video files.">
@@ -16,18 +20,15 @@
 		<meta property="og:description" content="Transcribolt offers online fast and accurate speech to text transcription for audio and video files.">
 		<meta property="og:url" content="https://www.transcribolt.com">
 		<meta property="og:type" content="website">
-		<!-- <meta property="og:image" content="https://www.transcribolt.com/images/og-image.jpg">-->
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="Transcribolt - Speech to Text Transcription Service">
 		<meta name="twitter:description" content="Transcribolt offers online fast and accurate speech to text transcription for audio and video files.">
-		<!-- <meta name="twitter:image" content="https://www.transcribolt.com/images/twitter-image.jpg"> -->
 
 		<!-- Additional Meta Tags -->
 		<meta name="theme-color" content="#ffffff">
 		<meta name="msapplication-TileColor" content="#ffffff">
-		<!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">-->
 
 		%sveltekit.head%
 		<script
