--- a/src/app.html
+++ b/src/app.html
@@ -38,7 +38,7 @@
 		>
 		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover" class="dark">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
